--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Colorswitch</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css"/ >
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css" />
-    </head>
-    <body>
-        <script src="/colorswitch.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Colorswitch</title>
+    <link rel="stylesheet" href="style.scss">
+</head>
+
+<body>
+    <script src="/colorswitch.js"></script>
+</body>
+
 </html>
