--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Colorswitch</title>
+    <title>colorimetry.net</title>
     <link rel="stylesheet" href="style.scss">
 </head>
 
 <body>
-    <script src="/colorswitch.js"></script>
+    <script src="/colorimetry-net.js"></script>
 </body>
 
 </html>
