add <noscript> error

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+    <noscript>
+        <h1>❌ Error: your browser does not support JavaScript, but this page requires it. ❌</h1>
+    </noscript>
     <script src="/colorimetry-net.js"></script>
 </body>
 
