--- a/hnb-app/static/index.html
+++ b/hnb-app/static/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>hnb-app - dev</title>
+    <title>ColorSwitch HNB (development)</title>
 </head>
 
 <body>
-    <h1>hnb-app development</h1>
+    <h1>ColorSwitch HNB (development)</h1>
 
     (This is the dev view and CSS styling does not work in this dev view.)
 
