--- a/autocal/static/index.html
+++ b/autocal/static/index.html
@@ -15,7 +15,7 @@
     <div id="app-main">
         Loading...
     </div>
-    <script src="/hnb-app.js"></script>
+    <script src="/autocal.js"></script>
 </body>
 
 </html>
