rename 'ColorSwitch HNB' -> 'HNB enhance'

--- a/hnb-app/static/index.html
+++ b/hnb-app/static/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ColorSwitch HNB (development)</title>
+    <title>HNB enhance (development)</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <h1>ColorSwitch HNB (development)</h1>
+    <h1>HNB enhance (development)</h1>
 
     (This is the dev view.)
 
